--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11005,3 +11005,15 @@ img,
   background-color: #F4F5F7 !important;
 }
 
+@media (max-width: 991.98px) {
+  .h1 {
+    font-size: 2rem !important;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .h1 {
+    font-size: 1.5rem !important;
+  }
+}
+
