--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -69,6 +69,15 @@ img, .widget {
     }
 }
 
-.bg-light{
+.bg-light {
     background-color: $light !important;
+}
+
+.h1 {
+    @include media-breakpoint-down(md) {
+        font-size: 2rem !important;
+    }
+    @include media-breakpoint-down(sm) {
+        font-size: 1.5rem !important;
+    }
 }
